tests/cases/compiler-development/artifact/errors/diagnostic-match-nonexhaustive.diagnostic
diagnostic error code=T0001 family=type message="match must cover all cases of enum 'OptionI32'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-nonexhaustive.ari" display="tests/cases/match/errors/match-nonexhaustive.ari" bytes=156
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-nonexhaustive.ari" line=8 column=3 end_line=8 end_column=8 byte_start=85 byte_end=90 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-nonexhaustive.ari:8:3\n   |\n 8 |   match value {\n   |   ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-nonexhaustive.ari" line=2 column=3 end_line=2 end_column=7 byte_start=19 byte_end=23 message="missing enum case 'None' declared here"
  Snippet label=1 text="  --> tests/cases/match/errors/match-nonexhaustive.ari:2:3\n   |\n 2 |   None,\n   |   ^^^^"
  Note index=0 location=none message="enum matches must cover every case unless a wildcard arm handles the remaining cases"
  Help index=0 location=none message="add an arm such as None => ... or a final _ arm"
